--- a/arch/arm/boot/dts/imx6qdl-hummingboard.dtsi
+++ b/arch/arm/boot/dts/imx6qdl-hummingboard.dtsi
@@ -45,7 +45,7 @@
 / {
 	aliases {
                 mmc0 = &usdhc2;
-                mmc1 = &usdhc1;
+                mmc1 = &usdhc3;
 		mxcfb0 = &mxcfb1;
 		mxcfb2 = &mxcfb2;
 	};
@@ -55,13 +55,50 @@
 		stdout-path = &uart1;
 	};
 
+	gpio-keys {
+	    compatible = "gpio-keys";
+	    pinctrl-names = "default";
+	    pinctrl-0 = <&pinctrl_hummingboard_gpio2_16>;
+	
+	    factory-reset {
+	            label = "Factory Reset";
+	            gpios = <&gpio2 16 GPIO_ACTIVE_LOW>;
+	            linux,code = <194>;
+	    };
+	};
+
+
 	ir_recv: ir-receiver {
 		compatible = "gpio-ir-receiver";
-		gpios = <&gpio3 5 1>;
+		gpios = <&gpio7 9 1>;
 		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_hummingboard_gpio3_5>;
-		linux,rc-map-name = "rc-rc6-mce";	
+		/* pinctrl-0 = <&pinctrl_hummingboard_gpio3_5>; */
+		pinctrl-0 = <&pinctrl_hummingboard_gpio7_9>;
+		linux,rc-map-name = "rc-rc6-mce";
+		status = "okay";	
 	};
+	
+/*	ir_out: ir-transmiter {
+		compatible = "gpio-ir-receiver";
+		gpios = <&gpio3 3 1>;
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_hummingboard_gpio3_3>;
+		linux,rc-map-name = "rc-rc6-mce";
+		status = "okay";	
+	};
+*/	
+	
+	/*
+	kenc-kdec-control {
+		compatible = "gpio-leds";
+		sgtl5000 {
+			label = "SGTL5000 Active";
+			pinctrl-names = "default";
+			pinctrl-0 = <&pinctrl_hummingboard_sgtl5000_enable>;
+			gpios = <&gpio3 2 GPIO_ACTIVE_HIGH>;
+			default-state = "off";
+		};
+	};*/
 
 	mxcfb1: fb@0 {
 		compatible = "fsl,mxc_sdc_fb";
@@ -74,7 +111,7 @@
 		status = "okay";
         };
 
-        mxcfb2: fb@1 {
+    mxcfb2: fb@1 {
                 compatible = "fsl,mxc_sdc_fb";
                 disp_dev = "ldb";
                 interface_pix_fmt = "RGB666";
@@ -126,6 +163,17 @@
 			regulator-min-microvolt = <3300000>;
 			regulator-max-microvolt = <3300000>;
 		};
+		
+		reg_sdb_vmmc: sdb_vmmc{
+			compatible = "regulator-fixed";
+			regulator-name = "SD2_SPWR";
+			regulator-min-microvolt = <3300000>;
+			regulator-max-microvolt = <3300000>;
+			/*gpio = <&gpio2 11 GPIO_ACTIVE_LOW>;*/
+			regulator-always-on;
+			regulator-boot-on;
+		};
+		
 	};
 
 	sound-sgtl5000 {
@@ -141,13 +189,16 @@
 		cpu-dai = <&ssi1>;
 	};
 
+
+	/* IMX6 doesn't implement this yet */
+
 	sound-spdif {
 		compatible = "fsl,imx-audio-spdif";
 		model = "On-board SPDIF";
-		/* IMX6 doesn't implement this yet */
 		spdif-controller = <&spdif>;
 		spdif-out;
 	};
+
 
 	sound-hdmi {
 		compatible = "fsl,imx6q-audio-hdmi",
@@ -155,14 +206,24 @@
 		model = "imx-audio-hdmi";
 		hdmi-controller = <&hdmi_audio>;
 	};
-
+	
+	sound-hdmi-input {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_tc358743_audio>;
+		compatible = "fsl,imx-audio-tc358743";
+		model = "tc358743-audio";
+		mux-ext-port = <5>;
+		mux-int-port = <1>;
+		cpu-dai = <&ssi1>;
+	};
+	
 	v4l2_cap_0 {
 		compatible = "fsl,imx6q-v4l2-capture";
 		ipu_id = <0>;
-		csi_id = <1>;
+		csi_id = <0>;
 		mclk_source = <0>;
 		mipi_camera = <1>;
-		default_input = <1>;
+		default_input = <0>;
 		status = "okay";
 	};
 
@@ -221,27 +282,6 @@
 	pinctrl-0 = <&pinctrl_hummingboard_i2c1>;
 	status = "okay";
 
-	/* Raspberry Pi camera rev 1.3 */
-	ov5647_mipi: ov5647_mipi@36 {
-		compatible = "ovti,ov5647_mipi";
-		reg = <0x36>;
-		/* Pi camera has its own 25MHz clock. */
-		clocks = <&clks 0>;
-		clock-names = "csi_mclk";
-		DOVDD-supply = <&reg_3p3v>;
-		AVDD-supply = <&reg_3p3v>;
-		DVDD-supply = <&reg_3p3v>;
-		pwn-gpios = <&gpio2 10 GPIO_ACTIVE_HIGH>;
-		led-gpios = <&gpio6 15 GPIO_ACTIVE_HIGH>;
-		ipu_id = <0>;
-		csi_id = <1>;
-		mclk = <25000000>;
-		mclk_source = <0>;
-		pinctrl-names = "default";
-		pinctrl-0 = <&pinctrl_hummingboard_mipi>;
-		extended-buffer;
-	};
-
 	/* Pro baseboard model */
 	rtc: pcf8523@68 {
 		compatible = "nxp,pcf8523";
@@ -250,6 +290,7 @@
 	};
 
 	/* Pro baseboard model */
+	
 	sgtl5000: sgtl5000@0a {
 		compatible = "fsl,sgtl5000";
 		reg = <0x0a>;
@@ -258,6 +299,21 @@
 		pinctrl-0 = <&pinctrl_hummingboard_sgtl5000>;
 		VDDA-supply = <&reg_3p3v>;
 		VDDIO-supply = <&reg_3p3v>;
+	};
+
+	tc358743_mipi: tc358743_mipi@0f {
+		compatible = "tc358743_mipi";
+		reg = <0x0f>;
+		clocks = <&clks IMX6QDL_CLK_CKO>;
+		clock-names = "csi_mclk";
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_hummingboard_mipi>;
+		rst-gpios = <&gpio6 15 GPIO_ACTIVE_HIGH>;
+		interrupts-extended = <&gpio2 10 IRQ_TYPE_LEVEL_LOW>;
+		ipu_id = <0>;
+		csi_id = <0>;
+		mclk = <27000000>;
+		mclk_source = <0>;
 	};
 };
 
@@ -301,9 +357,10 @@
                                 MX6QDL_PAD_EIM_DA8__GPIO3_IO08 0x400130b1
                                 MX6QDL_PAD_EIM_DA7__GPIO3_IO07 0x400130b1
                                 MX6QDL_PAD_EIM_DA6__GPIO3_IO06 0x400130b1
-                                MX6QDL_PAD_SD3_CMD__GPIO7_IO02 0x400130b1
-                                MX6QDL_PAD_SD3_CLK__GPIO7_IO03 0x400130b1
-                                MX6QDL_PAD_EIM_DA3__GPIO3_IO03 0x400130b1
+                                /*MX6QDL_PAD_SD3_CMD__GPIO7_IO02 0x400130b1*/
+                                /*MX6QDL_PAD_SD3_CLK__GPIO7_IO03 0x400130b1*/
+                                /* MX6QDL_PAD_EIM_DA3__GPIO3_IO03 0x400130b1*/
+                                MX6QDL_PAD_EIM_DA2__GPIO3_IO02 0x400130b1
                         >;
                 };
 
@@ -317,6 +374,18 @@
 		pinctrl_hummingboard_gpio3_5: hummingboard-gpio3_5 {
 			fsl,pins = <
 				MX6QDL_PAD_EIM_DA5__GPIO3_IO05 0x1b0b1
+			>;
+		};
+		
+		pinctrl_hummingboard_gpio7_9: hummingboard-gpio7_9 {
+			fsl,pins = <
+				MX6QDL_PAD_SD4_CMD__GPIO7_IO09 0x1b0b1
+			>;
+		};
+
+		pinctrl_hummingboard_gpio3_3: hummingboard-gpio3_3 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_DA3__GPIO3_IO03 0x1b0b1
 			>;
 		};
 
@@ -356,7 +425,12 @@
 		pinctrl_hummingboard_pwm1: pwm1grp {
 			fsl,pins = <MX6QDL_PAD_DISP0_DAT8__PWM1_OUT 0x1b0b1>;
 		};
-
+		
+		/*
+		pinctrl_hummingboard_sgtl5000_enable: hummingboard-sgtl5000-led {
+			fsl,pins = <MX6QDL_PAD_EIM_DA2__GPIO3_IO02 0x400130b1>;
+		};*/
+		
 		pinctrl_hummingboard_sgtl5000: hummingboard-sgtl5000 {
 			fsl,pins = <
 				MX6QDL_PAD_DISP0_DAT19__AUD5_RXD 0x130b0
@@ -364,6 +438,30 @@
 				MX6QDL_PAD_KEY_ROW0__AUD5_TXD 0x110b0
 				MX6QDL_PAD_KEY_COL1__AUD5_TXFS 0x130b0
 				MX6QDL_PAD_GPIO_5__CCM_CLKO1 0x130b0
+			>;
+		};
+		
+		/*
+		pinctrl_tc358743_audio: tc358743_audio {
+			fsl,pins = <
+				MX6QDL_PAD_DISP0_DAT19__AUD5_RXD 0x130b0
+				MX6QDL_PAD_KEY_COL0__AUD5_TXC 0x130b0
+				MX6QDL_PAD_KEY_ROW0__AUD5_TXD 0x110b0
+				MX6QDL_PAD_KEY_COL1__AUD5_TXFS 0x130b0
+				MX6QDL_PAD_GPIO_5__CCM_CLKO1 0x130b0
+				MX6QDL_PAD_DISP0_DAT13__AUD5_RXFS	0x130b0
+				MX6QDL_PAD_DISP0_DAT14__AUD5_RXC	0x130b0
+			>;
+		};
+		*/
+		
+		pinctrl_tc358743_audio: tc358743_audio_grp {
+			fsl,pins = <
+/*				MX6QDL_PAD_DISP0_DAT19__AUD5_RXD	0x130b0
+				MX6QDL_PAD_KEY_COL0__AUD5_TXC 		0x130b0
+				MX6QDL_PAD_KEY_ROW0__AUD5_TXD 		0x110b0
+				MX6QDL_PAD_KEY_COL1__AUD5_TXFS 		0x130b0
+				MX6QDL_PAD_GPIO_5__CCM_CLKO1        0x130b0*/
 			>;
 		};
 
@@ -393,8 +491,14 @@
 
 		pinctrl_hummingboard_usdhc2_aux: hummingboard-usdhc2-aux {
 			fsl,pins = <
-				MX6QDL_PAD_GPIO_4__GPIO1_IO04    0x13071
+				MX6QDL_PAD_GPIO_4__GPIO1_IO04    0x1f071
 				MX6QDL_PAD_KEY_ROW1__SD2_VSELECT 0x1b071
+			>;
+		};
+		
+		pinctrl_hummingboard_gpio2_16: hummingboard-gpio2_16 {
+			fsl,pins = <
+				MX6QDL_PAD_EIM_A22__GPIO2_IO16 0x0b0b1
 			>;
 		};
 
@@ -431,6 +535,24 @@
 			>;
 		};
 	};
+	
+	usdhc3 {
+		pinctrl_usdhc3_1: usdhc3grp-1 {
+			fsl,pins = <
+				MX6QDL_PAD_SD3_CMD__SD3_CMD	  0x00018
+				MX6QDL_PAD_SD3_CLK__SD3_CLK	  0x00018
+				MX6QDL_PAD_SD3_DAT0__SD3_DATA0 0x00018
+				MX6QDL_PAD_SD3_DAT1__SD3_DATA1 0x00018
+				MX6QDL_PAD_SD3_DAT2__SD3_DATA2 0x00018
+				MX6QDL_PAD_SD3_DAT3__SD3_DATA3 0x00018
+				MX6QDL_PAD_SD3_DAT4__SD3_DATA4 0x00018
+				MX6QDL_PAD_SD3_DAT5__SD3_DATA5 0x00018
+				MX6QDL_PAD_SD3_DAT6__SD3_DATA6 0x00018
+				MX6QDL_PAD_SD3_DAT7__SD3_DATA7 0x00018
+			>;
+		};
+	};
+	
 };
 
 &ldb {
@@ -461,10 +583,10 @@
 
 &mipi_csi {
 	ipu_id = <0>;
-	csi_id = <1>;
+	csi_id = <0>;
 	v_channel = <0>;
 	lanes = <2>;
-	mipi_dphy_clk = /bits/ 8 <0x28>;
+	mipi_dphy_clk = /bits/ 8 <0x14>;
 	status = "okay";
 };
 
@@ -493,6 +615,16 @@
 };
 
 &ssi1 {
+	fsl,mode = "i2s-slave";
+	status = "okay";
+};
+
+&ssi2 {
+	fsl,mode = "i2s-slave";
+	status = "okay";
+};
+
+&ssi3 {
 	fsl,mode = "i2s-slave";
 	status = "okay";
 };
@@ -530,3 +662,14 @@
 	cd-gpios = <&gpio1 4 0>;
 	status = "okay";
 };
+
+&usdhc3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&pinctrl_usdhc3_1>;
+	bus-width = <8>;
+	non-removable;
+	no-1-8-v;
+	vmmc-supply = <&reg_sdb_vmmc>;
+	status = "okay";
+};
+
