--- a/config
+++ b/config
@@ -2269,6 +2269,8 @@ CONFIG_MXC_CAMERA_OV5642=m
 CONFIG_MXC_CAMERA_OV5640_MIPI=m
 # CONFIG_MXC_CAMERA_OV5647_MIPI is not set
 CONFIG_MXC_HDMI_CSI2_TC358743=m
+CONFIG_TC358743_DEV=y
+CONFIG_TC358743_AUDIO=y
 CONFIG_MXC_TVIN_ADV7180=m
 CONFIG_MXC_IPU_DEVICE_QUEUE_SDC=m
 CONFIG_MXC_IPU_PRP_ENC=m
@@ -3144,7 +3146,10 @@ CONFIG_DMA_OF=y
 #
 CONFIG_STAGING=y
 # CONFIG_ET131X is not set
-# CONFIG_USBIP_CORE is not set
+CONFIG_USBIP_CORE=m
+CONFIG_USBIP_VHCI_HCD=m
+CONFIG_USBIP_HOST=m
+# CONFIG_USBIP_DEBUG is not set
 # CONFIG_W35UND is not set
 # CONFIG_PRISM2_USB is not set
 # CONFIG_ECHO is not set
