--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -176,6 +176,8 @@ dtb-$(CONFIG_ARCH_MXC) += \
 	imx6q-cubox-i.dtb \
 	imx6q-hummingboard.dtb \
 	imx6q-hummingboard2.dtb \
+	imx6q-hummingboard-kdec4.dtb \
+	imx6q-hummingboard-kenc4.dtb \
 	imx6q-phytec-pbab01.dtb \
 	imx6q-sabreauto.dtb \
 	imx6q-sabreauto-flexcan1.dtb \
