--- a/arch/arm/boot/dts/imx6q-hummingboard-kenc4.dts
+++ b/arch/arm/boot/dts/imx6q-hummingboard-kenc4.dts
@@ -2208,7 +2208,7 @@
 			 * Similar to pinctrl_usbotg_2, but we want it
 			 * pulled down for a fixed host connection.
 			 */
-			fsl,pins = <MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 0x13059>;
+			fsl,pins = <MX6QDL_PAD_ENET_RX_ER__USB_OTG_ID 0x1B059>;
 		};
 
 		pinctrl_hummingboard_usbotg_vbus: hummingboard-usbotg-vbus {
@@ -2384,6 +2384,7 @@
 	pinctrl-0 = <&pinctrl_hummingboard_usbotg_id>;
 	vbus-supply = <&reg_usbotg_vbus>;
 	status = "okay";
+	dr_mode="otg";
 };
 
 &usdhc2 {
